fixtures/runtime/valid/exceptions/catch-exception.php
<?php
try {
    throw new Exception("boom");
} catch (Exception $e) {
    echo "caught\n";
}
