fixtures/runtime/invalid/exceptions/throw-uncaught.php
<?php
throw new Exception("boom");
